--- a/WaterControl/WaterControl.csproj
+++ b/WaterControl/WaterControl.csproj
@@ -7,4 +7,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Converters\" />
+    <Folder Include="Data\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Models\" />
+    <Folder Include="Windows\" />
+    <Folder Include="Resources\" />
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
