--- a/WaterControl/WaterControl.csproj
+++ b/WaterControl/WaterControl.csproj
@@ -8,11 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\login.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\login.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Converters\" />
     <Folder Include="Data\" />
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
-    <Folder Include="Resources\" />
     <Folder Include="Pages\" />
   </ItemGroup>
 
