--- a/WaterControl/WaterControl.csproj
+++ b/WaterControl/WaterControl.csproj
@@ -24,9 +24,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentModbus" Version="4.1.0" />
     <PackageReference Include="MaterialDesignColors" Version="2.1.1" />
     <PackageReference Include="MaterialDesignThemes" Version="4.7.1" />
     <PackageReference Include="MaterialDesignThemes.Wpf" Version="1.0.1" />
+    <PackageReference Include="System.IO.Ports" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
